Fixed issues that was caused when using React Fix the CSS issue that Oleksi had with the UI jumping around on edit, by having a disabled input

--- a/src/ws-inline-edit/ws-inline-edit.scss
+++ b/src/ws-inline-edit/ws-inline-edit.scss
@@ -7,15 +7,25 @@
   padding: 0.25rem 0.5rem;
   line-height: 1.5rem;
   box-sizing: border-box;
-  
-  > div {
+  .inlineValue {
+    display: inline-block;
     font-weight: normal;
-    width: 100%;
+    //width: 100%;
+    min-height: 1.5rem;
+    line-height: 1.5rem;
+    padding: 0 .5rem;
   }
-  
-  > input {
-    width: 100%;
+  .inlineInput {
+    //width: 100%;
+    max-height: 1.5rem;
     box-sizing: border-box;
-    margin: 0 -15rem 0 0;
+    transition: all 0.5s ease;
+    //margin: 0 -15rem 0 0;
+    &[disabled] {
+      cursor: text;
+      background-color: transparent;
+      border-color: transparent;
+      box-shadow: 0 0 0;
+    }
   }
 }
